Added both the submarine information menu and the the player death changes
Further details on the Jira Log

--- a/Game Files/Main Game Week 7/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game Files/Main Game Week 7/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -42,7 +42,7 @@ Uncategorized=False
 User Created=False
 
 [EditorStartup]
-LastLevel=/Game/Levels/Main_Level
+LastLevel=/Game/Levels/Main_Menu
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -251,6 +251,133 @@ K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
 K2Node_VariableGet.Events=True
+P1_Sub_JPN_Easy_C.Tick=True
+P1_Sub_JPN_Easy_C.Default=True
+P1_Sub_JPN_Easy_C.Rendering=True
+P1_Sub_JPN_Easy_C.Replication=True
+P1_Sub_JPN_Easy_C.Input=True
+P1_Sub_JPN_Easy_C.Actor=True
+P1_Sub_JPN_Expert_C.Tick=True
+P1_Sub_JPN_Expert_C.Default=True
+P1_Sub_JPN_Expert_C.Rendering=True
+P1_Sub_JPN_Expert_C.Replication=True
+P1_Sub_JPN_Expert_C.Input=True
+P1_Sub_JPN_Expert_C.Actor=True
+P1_Sub_JPN_Medium_C.Tick=True
+P1_Sub_JPN_Medium_C.Default=True
+P1_Sub_JPN_Medium_C.Rendering=True
+P1_Sub_JPN_Medium_C.Replication=True
+P1_Sub_JPN_Medium_C.Input=True
+P1_Sub_JPN_Medium_C.Actor=True
+P1_Sub_RUS_Easy_C.Tick=True
+P1_Sub_RUS_Easy_C.Default=True
+P1_Sub_RUS_Easy_C.Rendering=True
+P1_Sub_RUS_Easy_C.Replication=True
+P1_Sub_RUS_Easy_C.Input=True
+P1_Sub_RUS_Easy_C.Actor=True
+P1_Sub_RUS_Expert_C.Tick=True
+P1_Sub_RUS_Expert_C.Default=True
+P1_Sub_RUS_Expert_C.Rendering=True
+P1_Sub_RUS_Expert_C.Replication=True
+P1_Sub_RUS_Expert_C.Input=True
+P1_Sub_RUS_Expert_C.Actor=True
+P1_Sub_RUS_Medium_C.Tick=True
+P1_Sub_RUS_Medium_C.Default=True
+P1_Sub_RUS_Medium_C.Rendering=True
+P1_Sub_RUS_Medium_C.Replication=True
+P1_Sub_RUS_Medium_C.Input=True
+P1_Sub_RUS_Medium_C.Actor=True
+P1_Sub_TUR_Expert_C.Tick=True
+P1_Sub_TUR_Expert_C.Default=True
+P1_Sub_TUR_Expert_C.Rendering=True
+P1_Sub_TUR_Expert_C.Replication=True
+P1_Sub_TUR_Expert_C.Input=True
+P1_Sub_TUR_Expert_C.Actor=True
+P1_Sub_TUR_Medium_C.Tick=True
+P1_Sub_TUR_Medium_C.Default=True
+P1_Sub_TUR_Medium_C.Rendering=True
+P1_Sub_TUR_Medium_C.Replication=True
+P1_Sub_TUR_Medium_C.Input=True
+P1_Sub_TUR_Medium_C.Actor=True
+P2_Sub_JPN_Easy_C.Tick=True
+P2_Sub_JPN_Easy_C.Default=True
+P2_Sub_JPN_Easy_C.Rendering=True
+P2_Sub_JPN_Easy_C.Replication=True
+P2_Sub_JPN_Easy_C.Input=True
+P2_Sub_JPN_Easy_C.Actor=True
+P2_Sub_JPN_Expert_C.Tick=True
+P2_Sub_JPN_Expert_C.Default=True
+P2_Sub_JPN_Expert_C.Rendering=True
+P2_Sub_JPN_Expert_C.Replication=True
+P2_Sub_JPN_Expert_C.Input=True
+P2_Sub_JPN_Expert_C.Actor=True
+P2_Sub_JPN_Medium_C.Tick=True
+P2_Sub_JPN_Medium_C.Default=True
+P2_Sub_JPN_Medium_C.Rendering=True
+P2_Sub_JPN_Medium_C.Replication=True
+P2_Sub_JPN_Medium_C.Input=True
+P2_Sub_JPN_Medium_C.Actor=True
+P2_Sub_TUR_Expert_C.Tick=True
+P2_Sub_TUR_Expert_C.Default=True
+P2_Sub_TUR_Expert_C.Rendering=True
+P2_Sub_TUR_Expert_C.Replication=True
+P2_Sub_TUR_Expert_C.Input=True
+P2_Sub_TUR_Expert_C.Actor=True
+P2_Sub_TUR_Medium_C.Tick=True
+P2_Sub_TUR_Medium_C.Default=True
+P2_Sub_TUR_Medium_C.Rendering=True
+P2_Sub_TUR_Medium_C.Replication=True
+P2_Sub_TUR_Medium_C.Input=True
+P2_Sub_TUR_Medium_C.Actor=True
+Seaweed_Clump_C.Tick=True
+Seaweed_Clump_C.Default=True
+Seaweed_Clump_C.Rendering=True
+Seaweed_Clump_C.Replication=True
+Seaweed_Clump_C.Input=True
+Seaweed_Clump_C.Actor=True
+Submarine_Info_C.Appearance=True
+Submarine_Info_C.Interaction=True
+Submarine_Info_C.Input=True
+Submarine_Info_C.Designer=True
+Submarine_Info_C.Layout=True
+Submarine_Info_C.Behavior=True
+Submarine_Info_C.Clipping=True
+Submarine_Info_C.Performance=True
+Submarine_Info_C.Render Transform=True
+Submarine_Info_C.Navigation=True
+How_To_Play_C.Appearance=True
+How_To_Play_C.Interaction=True
+How_To_Play_C.Input=True
+How_To_Play_C.Designer=True
+How_To_Play_C.Layout=True
+How_To_Play_C.Behavior=True
+How_To_Play_C.Clipping=True
+How_To_Play_C.Performance=True
+How_To_Play_C.Render Transform=True
+How_To_Play_C.Navigation=True
+Image.Layout=True
+Image.Appearance=True
+Image.Behavior=True
+Image.Clipping=True
+Image.Performance=True
+Image.Render Transform=True
+Image.Navigation=True
+Image.Events=True
+Widget.Layout=True
+Widget.Behavior=True
+Widget.Clipping=True
+Widget.Performance=True
+Widget.Render Transform=True
+Widget.Navigation=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Clipping=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -265,7 +392,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/HUD
+ContentBrowserTab1.SelectedPaths=/Game/Art/HUD_Artwork
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -296,6 +423,22 @@ ContentBrowserTab1.CurrentViewType=1
 /Game/Blueprints/P2_Conventional_Torpedo.P2_Conventional_Torpedo=1
 /Game/HUD/Sub_Selection.Sub_Selection=1
 /Game/HUD/Health_Bars.Health_Bars=1
+/Game/Blueprints/P1_Sub_JPN_Easy.P1_Sub_JPN_Easy=1
+/Game/Blueprints/P1_Sub_JPN_Expert.P1_Sub_JPN_Expert=1
+/Game/Blueprints/P1_Sub_JPN_Medium.P1_Sub_JPN_Medium=1
+/Game/Blueprints/P1_Sub_RUS_Easy.P1_Sub_RUS_Easy=1
+/Game/Blueprints/P1_Sub_RUS_Expert.P1_Sub_RUS_Expert=1
+/Game/Blueprints/P1_Sub_RUS_Medium.P1_Sub_RUS_Medium=1
+/Game/Blueprints/P1_Sub_TUR_Expert.P1_Sub_TUR_Expert=1
+/Game/Blueprints/P1_Sub_TUR_Medium.P1_Sub_TUR_Medium=1
+/Game/Blueprints/P2_Sub_JPN_Easy.P2_Sub_JPN_Easy=1
+/Game/Blueprints/P2_Sub_JPN_Expert.P2_Sub_JPN_Expert=1
+/Game/Blueprints/P2_Sub_JPN_Medium.P2_Sub_JPN_Medium=1
+/Game/Blueprints/P2_Sub_TUR_Expert.P2_Sub_TUR_Expert=1
+/Game/Blueprints/P2_Sub_TUR_Medium.P2_Sub_TUR_Medium=1
+/Game/Blueprints/Seaweed_Clump_2018-03-04-15-26-22.Seaweed_Clump=1
+/Game/HUD/How_To_Play.How_To_Play=1
+/Game/HUD/Submarine_Info.Submarine_Info=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -361,11 +504,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Dougmund/Documents/GitHub/dm-bandai-namco-group-9/Game Files/Main Game Week 7/Content/
+UNR=../../../../../../Users/Dougmund/Documents/GitHub/dm-bandai-namco-group-9/Game Files/Main Game Week 7/Content/Levels
 BRUSH=../../../../../../Users/Dougmund/Documents/GitHub/dm-bandai-namco-group-9/Game Files/Main Game Week 7/Content/
 FBX=../../../../../../Users/Dougmund/Documents/GitHub/dm-bandai-namco-group-9/Game Files/Main Game Week 7/Content/
 FBXAnim=../../../../../../Users/Dougmund/Documents/GitHub/dm-bandai-namco-group-9/Game Files/Main Game Week 7/Content/
-GenericImport=../../../../../../Users/Dougmund/Documents/GitHub/dm-bandai-namco-group-9/Game Files/Main Game Week 7/Content/
+GenericImport=../../../../../../Users/Dougmund/Documents/GitHub/dm-bandai-namco-group-9/Artwork/UI Art/Menu's/How to Play Menu/how_to_play_menu.jpg
 GenericExport=../../../../../../Users/Dougmund/Documents/GitHub/dm-bandai-namco-group-9/Game Files/Main Game Week 7/Content/
 GenericOpen=../../../../../../Users/Dougmund/Documents/GitHub/dm-bandai-namco-group-9/Game Files/Main Game Week 7/Content/
 GenericSave=../../../../../../Users/Dougmund/Documents/GitHub/dm-bandai-namco-group-9/Game Files/Main Game Week 7/Content/
@@ -913,5 +1056,18 @@ SequencerWidgets.TimeStamp=2017.08.17-14.50.43
 SequencerWidgets.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2017.08.17-14.49.35
 MovieSceneCapture.LastCompileMethod=Unknown
+
+[MRU]
+MRUItem0=/Game/Levels/Main_Menu
+
+[DetailPropertyExpansion]
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget=
+Visual=
+Object=
+Button=
+ContentWidget=
+PanelWidget=
 
 
