--- a/Game Files/Main Game Final Version/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game Files/Main Game Final Version/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0",BufferVisualizationMode="",ExposureSettings=(LogOffset=0,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [EditorStartup]
-LastLevel=/Game/Levels/Main_Level
+LastLevel=/Game/Levels/Main_Menu
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -116,7 +116,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [Directories2]
-UNR=../../../../../../Users/Dougmund/Documents/GitHub/dm-bandai-namco-group-9/Game Files/Main Game Final Version/Content/
+UNR=../../../../../../Users/Dougmund/Documents/GitHub/dm-bandai-namco-group-9/Game Files/Main Game Final Version/Content/Levels
 BRUSH=../../../../../../Users/Dougmund/Documents/GitHub/dm-bandai-namco-group-9/Game Files/Main Game Final Version/Content/
 FBX=../../../../../../Users/Dougmund/Documents/GitHub/dm-bandai-namco-group-9/Game Files/Main Game Final Version/Content/
 FBXAnim=../../../../../../Users/Dougmund/Documents/GitHub/dm-bandai-namco-group-9/Game Files/Main Game Final Version/Content/
@@ -666,6 +666,10 @@ BlueprintGraph.TimeStamp=2017.08.17-14.46.43
 BlueprintGraph.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2017.08.17-14.49.35
 MovieSceneCapture.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2017.08.17-14.51.24
+TextureEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2017.08.17-14.50.43
+SequencerWidgets.LastCompileMethod=Unknown
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -890,6 +894,54 @@ P2_Sub_USA_Medium_C.Rendering=True
 P2_Sub_USA_Medium_C.Replication=True
 P2_Sub_USA_Medium_C.Input=True
 P2_Sub_USA_Medium_C.Actor=True
+Image.Layout=True
+Image.Appearance=True
+Image.Behavior=True
+Image.Clipping=True
+Image.Performance=True
+Image.Render Transform=True
+Image.Navigation=True
+Image.Events=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Behavior=True
+Button.Clipping=True
+Button.Performance=True
+Button.Render Transform=True
+Button.Navigation=True
+Button.Events=True
+Widget.Layout=True
+Widget.Behavior=True
+Widget.Clipping=True
+Widget.Performance=True
+Widget.Render Transform=True
+Widget.Navigation=True
+PaperSpriteActor.TransformCommon=True
+PaperSpriteActor.Sprite=True
+PaperSpriteActor.Materials=True
+PaperSpriteActor.Physics=True
+PaperSpriteActor.Collision=True
+PaperSpriteActor.Lighting=True
+PaperSpriteActor.Rendering=True
+PaperSpriteActor.Tags=True
+PaperSpriteActor.Activation=True
+PaperSpriteActor.Cooking=True
+PaperSpriteActor.Input=True
+PaperSpriteActor.Actor=True
+Obstacle_Boulders_C.TransformCommon=True
+Obstacle_Boulders_C.Rendering=True
+Obstacle_Boulders_C.Input=True
+Obstacle_Boulders_C.Actor=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Clipping=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Art/Subs/Damaged/American_stage_1_75__health_sub.American_stage_1_75__health_sub=1
@@ -927,5 +979,36 @@ P2_Sub_USA_Medium_C.Actor=True
 /Game/Blueprints/P2_Sub_USA_Expert.P2_Sub_USA_Expert=1
 /Game/Blueprints/P1_Sub_USA_Medium.P1_Sub_USA_Medium=1
 /Game/Blueprints/P2_Sub_USA_Medium.P2_Sub_USA_Medium=1
+/Game/Art/Subs/Damaged/American_stage_2_50__health_sub_Sprite.American_stage_2_50__health_sub_Sprite=1
+/Game/Art/Subs/Normal/American_Sub_stage_3.American_Sub_stage_3=1
+/Game/Art/Subs/Normal/British_stage_2_sub.British_stage_2_sub=1
+/Game/Art/Subs/Normal/British_stage_1_sub_Sprite.British_stage_1_sub_Sprite=1
+/Game/Art/Subs/Normal/British_stage_1_sub.British_stage_1_sub=1
+/Game/Art/Subs/Normal/Japanese_basic_sub.Japanese_basic_sub=1
+/Game/Art/Subs/Damaged/British_stage_3_destroyed_sub.British_stage_3_destroyed_sub=1
+/Game/HUD/Main_Menu.Main_Menu=1
+/Game/HUD/How_To_Play.How_To_Play=1
+
+[MRU]
+MRUItem0=/Game/Levels/Main_Menu
+MRUItem1=/Game/Levels/Main_Level
+
+[WidgetTemplatesExpanded]
+Extra=False
+Input=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Uncategorized=False
+User Created=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+
+[PlacementMode]
+RecentlyPlaced=/Game/Art/HUD_Artwork/Main_Level_Background_Sprite.Main_Level_Background_Sprite;
 
 
